# tcpserver

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  exampleApp.cpp
examples/tcpcli/: CMakeLists.txt
examples/tcpcli/src/: CMakeLists.txt  CliPacket.cpp  CliPacket.h  CliServer.cpp  CliServer.h  ICliPacket.h  tcpcli_server.cpp
include/: ICommsApp.h  ICommsConnection.h  TcpServer.h
src/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  tcpserver.cpp  tcpserver.h
